--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import '../styles/global.css'
     />
   </head>
   <body>
-    <header class='primary-header'>
+    <header class='py-10 md:py-12 primary-header'>
       <div class='container'>
         <a href='/'><LogoBookmark /></a>
         <div>
@@ -37,7 +37,7 @@ import '../styles/global.css'
       </div>
     </header>
     <main>
-      <section class=''>
+      <section class='py-10 md:py-20'>
         <div class='container'>
           <div class='even-columns'>
             <div>
@@ -59,7 +59,7 @@ import '../styles/global.css'
           </div>
         </div>
       </section>
-      <section class=''>
+      <section class='py-16 md:py-20'>
         <div class='container'>
           <div class='text-center'>
             <h2>Features</h2>
@@ -149,7 +149,7 @@ import '../styles/global.css'
         </div>
       </section>
     </main>
-    <section class=''>
+    <section class='py-16 md:py-20'>
       <div class='container'>
         <div class='text-center'>
           <h2>Download the extension</h2>
@@ -194,7 +194,7 @@ import '../styles/global.css'
         <!-- TODO: cards -->
       </div>
     </section>
-    <section>
+    <section class='py-16 mb-12 md:py-20 md:mb-16'>
       <div class='container'>
         <div class='text-center'>
           <h2>Frequently Asked Questions</h2>
@@ -206,7 +206,7 @@ import '../styles/global.css'
         <!-- TODO: FAQs component -->
       </div>
     </section>
-    <section class='bg-primary-400 text-neutral-100'>
+    <section class='py-16 bg-primary-400 text-neutral-100'>
       <div class='container'>
         <div class='text-center'>
           <p>35.000+ already joined</p>
@@ -219,20 +219,22 @@ import '../styles/global.css'
       </div>
     </section>
   </body>
-  <footer class='primary-footer bg-neutral-900 text-neutral-100'>
-    <a href='/'><LogoBookmark /></a>
-    <nav class='secondary-navigation'>
-      <ul role='list' class='nav-list'>
-        <li><a href='#'>Features</a></li>
-        <li><a href='#'>Pricing</a></li>
-        <li><a href='#'>Contact</a></li>
-      </ul>
-    </nav>
-    <nav class='secondary-navigation'>
-      <ul role='list' class='nav-list'>
-        <li><a href='#'><IconFacebook /></a></li>
-        <li><a href='#'><IconTwitter /></a></li>
-      </ul>
-    </nav>
+  <footer class='py-10 primary-footer bg-neutral-900 text-neutral-100'>
+    <div class='container'>
+      <a href='/'><LogoBookmark /></a>
+      <nav class='secondary-navigation'>
+        <ul role='list' class='nav-list'>
+          <li><a href='#'>Features</a></li>
+          <li><a href='#'>Pricing</a></li>
+          <li><a href='#'>Contact</a></li>
+        </ul>
+      </nav>
+      <nav class='secondary-navigation'>
+        <ul role='list' class='nav-list'>
+          <li><a href='#'><IconFacebook /></a></li>
+          <li><a href='#'><IconTwitter /></a></li>
+        </ul>
+      </nav>
+    </div>
   </footer>
 </html>
