--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import IconFacebook from '../assets/icon-facebook.astro'
 import IconTwitter from '../assets/icon-twitter.astro'
 import LogoBookmark from '../assets/logo-bookmark.astro'
+import PrimaryHeading from '../components/ui/primary-heading.astro'
+import SecondaryHeading from '../components/ui/secondary-heading.astro'
 
 import '../styles/global.css'
 ---
@@ -41,7 +43,7 @@ import '../styles/global.css'
         <div class='container'>
           <div class='even-columns'>
             <div>
-              <h1>A simple bookmark manager</h1>
+              <PrimaryHeading>A simple bookmark manager</PrimaryHeading>
               <p>
                 A clean and simple interface to organize your favourite
                 websites. Open a new browser tab and see your sites load
@@ -62,7 +64,9 @@ import '../styles/global.css'
       <section class='py-16 md:py-20'>
         <div class='container'>
           <div class='text-center'>
-            <h2>Features</h2>
+            <SecondaryHeading class='text-neutral-900'>
+              Features
+            </SecondaryHeading>
             <p>
               Our aim is to make it quick and easy for you to access your
               favourite websites. Your bookmarks sync between your devices so
@@ -100,7 +104,9 @@ import '../styles/global.css'
               <img src='./images/illustration-features-tab-1.svg' alt='tab 1' />
             </div>
             <div>
-              <h3>Bookmark in one click</h3>
+              <SecondaryHeading tag='h3' class='text-neutral-900'>
+                Bookmark in one click
+              </SecondaryHeading>
               <p>
                 Organize your bookmarks however you like. Our simple
                 drag-and-drop interface gives you complete control over how you
@@ -119,7 +125,9 @@ import '../styles/global.css'
               <img src='./images/illustration-features-tab-2.svg' alt='tab 2' />
             </div>
             <div>
-              <h3>Intelligent search</h3>
+              <SecondaryHeading tag='h3' class='text-neutral-900'>
+                Intelligent search
+              </SecondaryHeading>
               <p>
                 Our powerful search feature will help you find saved sites in no
                 time at all. No need to trawl through all of your bookmarks.
@@ -137,7 +145,9 @@ import '../styles/global.css'
               <img src='./images/illustration-features-tab-3.svg' alt='tab 3' />
             </div>
             <div>
-              <h3>Share your bookmarks</h3>
+              <SecondaryHeading tag='h3' class='text-neutral-900'>
+                Share your bookmarks
+              </SecondaryHeading>
               <p>
                 Easily share your bookmarks and collections with others. Create
                 a shareable link that you can send at the click of a button.
@@ -152,7 +162,9 @@ import '../styles/global.css'
     <section class='py-16 md:py-20'>
       <div class='container'>
         <div class='text-center'>
-          <h2>Download the extension</h2>
+          <SecondaryHeading class='text-neutral-900'>
+            Download the extension
+          </SecondaryHeading>
           <p>
             We’ve got more browsers in the pipeline. Please do let us know if
             you’ve got a favourite you’d like us to prioritize.
@@ -163,7 +175,7 @@ import '../styles/global.css'
           <article class='card'>
             <header class='card__header'>
               <img src='./images/logo-chrome.svg' alt='chrome' />
-              <h3>Add to Chrome</h3>
+              <h4>Add to Chrome</h4>
               <p>Minimum version 62</p>
             </header>
             <main class='card__body'>
@@ -173,7 +185,7 @@ import '../styles/global.css'
           <article class='card'>
             <header class='card__header'>
               <img src='./images/logo-firefox.svg' alt='firefox' />
-              <h3>Add to Firefox</h3>
+              <h4>Add to Firefox</h4>
               <p>Minimum version 55</p>
             </header>
             <main class='card__body'>
@@ -183,7 +195,7 @@ import '../styles/global.css'
           <article class='card'>
             <header class='card__header'>
               <img src='./images/logo-opera.svg' alt='opera' />
-              <h3>Add to Opera</h3>
+              <h4>Add to Opera</h4>
               <p>Minimum version 46</p>
             </header>
             <main class='card__body'>
@@ -197,7 +209,9 @@ import '../styles/global.css'
     <section class='py-16 mb-12 md:py-20 md:mb-16'>
       <div class='container'>
         <div class='text-center'>
-          <h2>Frequently Asked Questions</h2>
+          <SecondaryHeading class='text-neutral-900'>
+            Frequently Asked Questions
+          </SecondaryHeading>
           <p>
             Here are some of our FAQs. If you have any other questions you´d
             like answered please feel free to email us.
@@ -210,7 +224,9 @@ import '../styles/global.css'
       <div class='container'>
         <div class='text-center'>
           <p>35.000+ already joined</p>
-          <h2>Stay up-to-date with what we're doing</h2>
+          <SecondaryHeading>
+            Stay up-to-date with what we're doing
+          </SecondaryHeading>
         </div>
         <form>
           <input type='email' name='email' id='email' />
