add button component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import IconTwitter from '../assets/icon-twitter.astro'
 import LogoBookmark from '../assets/logo-bookmark.astro'
 import PrimaryHeading from '../components/ui/primary-heading.astro'
 import SecondaryHeading from '../components/ui/secondary-heading.astro'
+import Button from '../components/ui/button.astro'
 
 import '../styles/global.css'
 ---
@@ -34,7 +35,7 @@ import '../styles/global.css'
               <li><a href='#'>Contact</a></li>
             </ul>
           </nav>
-          <a href='#' class='btn btn--accent'>Login</a>
+          <Button href='#' variant='accent'>Login</Button>
         </div>
       </div>
     </header>
@@ -49,8 +50,8 @@ import '../styles/global.css'
                 websites. Open a new browser tab and see your sites load
                 instantly. Try it for free.
               </p>
-              <a href='#' class='btn btn--primary'>Get it on Chrome</a>
-              <a href='#' class='btn btn--neutral'>Get it on Firefox</a>
+              <Button href='#'>Get it on Chrome</Button>
+              <Button href='#' variant='neutral'>Get it on Firefox</Button>
             </div>
             <div>
               <img
@@ -112,7 +113,7 @@ import '../styles/global.css'
                 drag-and-drop interface gives you complete control over how you
                 manage your favourite sites.
               </p>
-              <a href='#' class='btn btn--primary'>More info</a>
+              <Button href='#'>More Info</Button>
             </div>
           </article>
           <article
@@ -132,7 +133,7 @@ import '../styles/global.css'
                 Our powerful search feature will help you find saved sites in no
                 time at all. No need to trawl through all of your bookmarks.
               </p>
-              <a href='#' class='btn btn--primary'>More info</a>
+              <Button href='#'>More Info</Button>
             </div>
           </article>
           <article
@@ -152,7 +153,7 @@ import '../styles/global.css'
                 Easily share your bookmarks and collections with others. Create
                 a shareable link that you can send at the click of a button.
               </p>
-              <a href='#' class='btn btn--primary'>More info</a>
+              <Button href='#'>More Info</Button>
             </div>
           </article>
           <!-- TODO: tabs -->
@@ -179,7 +180,7 @@ import '../styles/global.css'
               <p>Minimum version 62</p>
             </header>
             <main class='card__body'>
-              <a href='#' class='btn btn--primary'>Add & install extension</a>
+              <Button href='#'>Add & install extension</Button>
             </main>
           </article>
           <article class='card'>
@@ -189,7 +190,7 @@ import '../styles/global.css'
               <p>Minimum version 55</p>
             </header>
             <main class='card__body'>
-              <a href='#' class='btn btn--primary'>Add & install extension</a>
+              <Button href='#'>Add & install extension</Button>
             </main>
           </article>
           <article class='card'>
@@ -199,7 +200,7 @@ import '../styles/global.css'
               <p>Minimum version 46</p>
             </header>
             <main class='card__body'>
-              <a href='#' class='btn btn--primary'>Add & install extension</a>
+              <Button href='#'>Add & install extension</Button>
             </main>
           </article>
         </div>
@@ -218,6 +219,7 @@ import '../styles/global.css'
           </p>
         </div>
         <!-- TODO: FAQs component -->
+        <Button href='#'>More Info</Button>
       </div>
     </section>
     <section class='py-16 bg-primary-400 text-neutral-100'>
@@ -230,7 +232,7 @@ import '../styles/global.css'
         </div>
         <form>
           <input type='email' name='email' id='email' />
-          <button>Contact us</button>
+          <Button variant='accent'>Contact us</Button>
         </form>
       </div>
     </section>
