fix button with hover state and new size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import '../styles/global.css'
               <li><a href='#'>Contact</a></li>
             </ul>
           </nav>
-          <Button href='#' variant='accent'>Login</Button>
+          <Button href='#' variant='accent' size='wide'>Login</Button>
         </div>
       </div>
     </header>
@@ -180,7 +180,9 @@ import '../styles/global.css'
               <p>Minimum version 62</p>
             </header>
             <main class='card__body'>
-              <Button href='#'>Add & install extension</Button>
+              <Button href='#' class='capitalize'>
+                Add & install extension
+              </Button>
             </main>
           </article>
           <article class='card'>
@@ -190,7 +192,9 @@ import '../styles/global.css'
               <p>Minimum version 55</p>
             </header>
             <main class='card__body'>
-              <Button href='#'>Add & install extension</Button>
+              <Button href='#' class='capitalize'>
+                Add & install extension
+              </Button>
             </main>
           </article>
           <article class='card'>
@@ -200,7 +204,9 @@ import '../styles/global.css'
               <p>Minimum version 46</p>
             </header>
             <main class='card__body'>
-              <Button href='#'>Add & install extension</Button>
+              <Button href='#' class='capitalize'>
+                Add & install extension
+              </Button>
             </main>
           </article>
         </div>
@@ -232,7 +238,7 @@ import '../styles/global.css'
         </div>
         <form>
           <input type='email' name='email' id='email' />
-          <Button variant='accent'>Contact us</Button>
+          <Button variant='accent' class='capitalize'>Contact us</Button>
         </form>
       </div>
     </section>
