--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -5,16 +5,20 @@ import { cn } from '../../lib/utils'
 import type { HTMLAttributes } from 'astro/types'
 
 const buttonVariants = cva(
-  'inline-flex items-center justify-center rounded-md text-sm font-medium shadow-md leading-none',
+  'inline-flex items-center justify-center rounded-md text-sm font-medium shadow-md leading-none border-2',
   {
     variants: {
       variant: {
-        primary: 'bg-primary-400 text-neutral-100 shadow-primary-400/25',
-        accent: 'bg-accent-400 text-neutral-100 shadow-accent-400/25',
-        neutral: 'bg-neutral-400/5 text-neutral-400 shadow-neutral-400/25'
+        primary:
+          'bg-primary-400 text-neutral-100 shadow-primary-400/25 border-primary-400 hover:text-primary-400 hover:bg-neutral-100',
+        accent:
+          'bg-accent-400 text-neutral-100 shadow-accent-400/25 border-accent-400 hover:text-accent-400 hover:bg-neutral-100',
+        neutral:
+          'bg-neutral-400/5 text-neutral-400 shadow-neutral-400/25 border-neutral-400/5 hover:border-neutral-400 hover:bg-neutral-100'
       },
       size: {
-        default: 'py-4 px-6'
+        default: 'py-4 px-6',
+        wide: 'py-4 px-8'
       }
     }
   }
