--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import '../styles/global.css'
               <li><a href='#'>Contact</a></li>
             </ul>
           </nav>
-          <Button href='#' variant='accent' size='wide'>Login</Button>
+          <Button as='a' href='#' variant='accent' size='wide'>Login</Button>
         </div>
       </div>
     </header>
@@ -50,8 +50,10 @@ import '../styles/global.css'
                 websites. Open a new browser tab and see your sites load
                 instantly. Try it for free.
               </p>
-              <Button href='#'>Get it on Chrome</Button>
-              <Button href='#' variant='neutral'>Get it on Firefox</Button>
+              <Button as='a' href='#'>Get it on Chrome</Button>
+              <Button as='a' href='#' variant='neutral'>
+                Get it on Firefox
+              </Button>
             </div>
             <div>
               <img
@@ -113,7 +115,7 @@ import '../styles/global.css'
                 drag-and-drop interface gives you complete control over how you
                 manage your favourite sites.
               </p>
-              <Button href='#'>More Info</Button>
+              <Button as='a' href='#'>More Info</Button>
             </div>
           </article>
           <article
@@ -133,7 +135,7 @@ import '../styles/global.css'
                 Our powerful search feature will help you find saved sites in no
                 time at all. No need to trawl through all of your bookmarks.
               </p>
-              <Button href='#'>More Info</Button>
+              <Button as='a' href='#'>More Info</Button>
             </div>
           </article>
           <article
@@ -153,7 +155,7 @@ import '../styles/global.css'
                 Easily share your bookmarks and collections with others. Create
                 a shareable link that you can send at the click of a button.
               </p>
-              <Button href='#'>More Info</Button>
+              <Button as='a' href='#'>More Info</Button>
             </div>
           </article>
           <!-- TODO: tabs -->
@@ -180,7 +182,7 @@ import '../styles/global.css'
               <p>Minimum version 62</p>
             </header>
             <main class='card__body'>
-              <Button href='#' class='capitalize'>
+              <Button as='a' href='#' class='capitalize'>
                 Add & install extension
               </Button>
             </main>
@@ -192,7 +194,7 @@ import '../styles/global.css'
               <p>Minimum version 55</p>
             </header>
             <main class='card__body'>
-              <Button href='#' class='capitalize'>
+              <Button as='a' href='#' class='capitalize'>
                 Add & install extension
               </Button>
             </main>
@@ -204,7 +206,7 @@ import '../styles/global.css'
               <p>Minimum version 46</p>
             </header>
             <main class='card__body'>
-              <Button href='#' class='capitalize'>
+              <Button as='a' href='#' class='capitalize'>
                 Add & install extension
               </Button>
             </main>
@@ -225,7 +227,7 @@ import '../styles/global.css'
           </p>
         </div>
         <!-- TODO: FAQs component -->
-        <Button href='#'>More Info</Button>
+        <Button as='a' href='#'>More Info</Button>
       </div>
     </section>
     <section class='py-16 bg-primary-400 text-neutral-100'>
