add focus-within state

--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -10,11 +10,11 @@ const buttonVariants = cva(
     variants: {
       variant: {
         primary:
-          'bg-primary-400 text-neutral-100 shadow-primary-400/25 border-primary-400 hover:text-primary-400 hover:bg-neutral-100',
+          'bg-primary-400 text-neutral-100 shadow-primary-400/25 border-primary-400 hover:text-primary-400 hover:bg-neutral-100 focus-within:text-primary-400 focus-within:bg-neutral-100 outline-none',
         accent:
-          'bg-accent-400 text-neutral-100 shadow-accent-400/25 border-accent-400 hover:text-accent-400 hover:bg-neutral-100',
+          'bg-accent-400 text-neutral-100 shadow-accent-400/25 border-accent-400 hover:text-accent-400 hover:bg-neutral-100 focus-within:text-accent-400 focus-within:bg-neutral-100 outline-none',
         neutral:
-          'bg-neutral-400/5 text-neutral-400 shadow-neutral-400/25 border-neutral-400/5 hover:border-neutral-400 hover:bg-neutral-100'
+          'bg-neutral-400/5 text-neutral-400 shadow-neutral-400/25 border-neutral-400/5  hover:border-neutral-400 hover:bg-neutral-100 focus-within:border-neutral-400 focus-within:bg-neutral-100 outline-none'
       },
       size: {
         default: 'py-4 px-6',
