--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -1,20 +1,21 @@
 ---
+import type { HTMLTag, Polymorphic } from 'astro/types'
 import { cva, type VariantProps } from 'class-variance-authority'
 
 import { cn } from '../../lib/utils'
-import type { HTMLAttributes } from 'astro/types'
 
 const buttonVariants = cva(
-  'inline-flex items-center justify-center rounded-md text-sm font-medium shadow-md leading-none border-2',
+  'inline-flex items-center justify-center rounded-md text-sm font-medium leading-none border-2',
   {
     variants: {
       variant: {
         primary:
-          'bg-primary-400 text-neutral-100 shadow-primary-400/25 border-primary-400 hover:text-primary-400 hover:bg-neutral-100 focus-within:text-primary-400 focus-within:bg-neutral-100 outline-none',
+          'bg-primary-400 text-neutral-100 shadow-md shadow-primary-400/25 border-primary-400 hover:text-primary-400 hover:bg-neutral-100 focus-within:text-primary-400 focus-within:bg-neutral-100 outline-none',
         accent:
-          'bg-accent-400 text-neutral-100 shadow-accent-400/25 border-accent-400 hover:text-accent-400 hover:bg-neutral-100 focus-within:text-accent-400 focus-within:bg-neutral-100 outline-none',
+          'bg-accent-400 text-neutral-100 shadow-md shadow-accent-400/25 border-accent-400 hover:text-accent-400 hover:bg-neutral-100 focus-within:text-accent-400 focus-within:bg-neutral-100 outline-none',
         neutral:
-          'bg-neutral-400/5 text-neutral-400 shadow-neutral-400/25 border-neutral-400/5  hover:border-neutral-400 hover:bg-neutral-100 focus-within:border-neutral-400 focus-within:bg-neutral-100 outline-none'
+          'bg-neutral-400/5 text-neutral-400 shadow-md shadow-neutral-400/25 border-neutral-400/5  hover:border-neutral-400 hover:bg-neutral-100 focus-within:border-neutral-400 focus-within:bg-neutral-100 outline-none',
+        outline: 'bg-transparent text-current border-current'
       },
       size: {
         default: 'py-4 px-6',
@@ -24,22 +25,18 @@ const buttonVariants = cva(
   }
 )
 
-type Props = (
-  | (HTMLAttributes<'button'> & { as?: 'button' })
-  | (HTMLAttributes<'a'> & { as: 'a' })
-) &
-  VariantProps<typeof buttonVariants>
+type Props<Tag extends HTMLTag> = VariantProps<typeof buttonVariants> &
+  Polymorphic<{ as: Tag }>
 
 const {
   class: className,
   variant = 'primary',
   size = 'default',
-  as: Comp = 'button',
+  as: Tag = 'button',
   ...props
 } = Astro.props
 ---
 
-<!-- TODO: fix this -->
-<Comp class={cn(buttonVariants({ variant, size, className }))} {...props}>
+<Tag class={cn(buttonVariants({ variant, size, className }))} {...props}>
   <slot />
-</Comp>
+</Tag>
