--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,9 +25,9 @@ import '../styles/global.css'
     />
   </head>
   <body>
-    <main>
-      <Header />
-      <section class='py-10 md:py-20'>
+    <Header />
+    <main class='mt-36'>
+      <section class='md:py-20'>
         <div class='container'>
           <div class='even-columns'>
             <div>
