--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -71,16 +71,20 @@ import Button from '../components/ui/button.astro'
   .primary-header {
     position: absolute;
     inset: 0 0 auto;
-    @apply text-neutral-900;
+    color: hsl(var(--clr-neutral-900));
+  }
+
+  .primary-navigation a:hover,
+  .primary-navigation a:focus,
+  .social-navigation a:hover,
+  .social-navigation a:focus {
+    outline: none;
+    color: hsl(var(--clr-accent-400));
   }
 
   .mobile-nav-toggle,
   .social-navigation {
     display: none;
-  }
-
-  .social-navigation a {
-    @apply hover:text-accent-400 focus:text-accent-400;
   }
 
   @media (max-width: 768px) {
@@ -96,11 +100,7 @@ import Button from '../components/ui/button.astro'
       gap: 2rem;
       text-align: center;
       text-transform: uppercase;
-    }
-
-    .primary-navigation a {
-      outline: none;
-      @apply text-neutral-100 text-xl hover:text-accent-400 focus:text-accent-400;
+      font-size: 1.25rem;
     }
 
     .primary-navigation[data-visible] {
@@ -110,7 +110,8 @@ import Button from '../components/ui/button.astro'
     .primary-header[data-visible] {
       position: fixed;
       inset: 0 0 0;
-      @apply bg-neutral-900/90 text-neutral-100;
+      background-color: hsl(var(--clr-neutral-900) / 0.9);
+      color: hsl(var(--clr-neutral-100));
     }
 
     .primary-header[data-visible] .social-navigation {
@@ -123,7 +124,7 @@ import Button from '../components/ui/button.astro'
     }
 
     .nav-list {
-      @apply border-y border-neutral-100/25;
+      border-block: 1px solid hsl(var(--clr-neutral-100) / 0.25);
     }
 
     .nav-list li {
@@ -131,7 +132,7 @@ import Button from '../components/ui/button.astro'
     }
 
     .nav-list li + li {
-      @apply border-t border-t-neutral-100/25;
+      border-top: 1px solid hsl(var(--clr-neutral-100) / 0.25);
     }
 
     .mobile-nav-toggle {
@@ -152,6 +153,7 @@ import Button from '../components/ui/button.astro'
       font-size: 0.8125rem;
       align-items: center;
     }
+
     .nav-list {
       display: flex;
       gap: 3rem;
