--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -5,7 +5,7 @@ import { cva, type VariantProps } from 'class-variance-authority'
 import { cn } from '../../lib/utils'
 
 const buttonVariants = cva(
-  'inline-flex items-center justify-center rounded-md text-sm font-medium leading-none border-2',
+  'inline-flex items-center justify-center rounded-md text-sm font-medium leading-none border-2 py-4',
   {
     variants: {
       variant: {
@@ -18,8 +18,9 @@ const buttonVariants = cva(
         outline: 'bg-transparent text-current border-current'
       },
       size: {
-        default: 'py-4 px-6',
-        wide: 'py-4 px-8'
+        default: 'px-6',
+        wide: 'px-8',
+        fullWidth: 'w-full'
       }
     }
   }
