--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,17 +30,23 @@ import '../styles/global.css'
       <section class='md:py-20'>
         <div class='container'>
           <div class='even-columns'>
-            <div>
-              <PrimaryHeading>A simple bookmark manager</PrimaryHeading>
-              <p>
+            <div class='text-center md:text-left'>
+              <PrimaryHeading class='mb-4'>
+                A simple bookmark manager
+              </PrimaryHeading>
+              <p class='mb-8 text-pretty'>
                 A clean and simple interface to organize your favourite
                 websites. Open a new browser tab and see your sites load
                 instantly. Try it for free.
               </p>
-              <Button as='a' href='#'>Get it on Chrome</Button>
-              <Button as='a' href='#' variant='neutral'>
-                Get it on Firefox
-              </Button>
+              <div class='flex gap-3'>
+                <Button as='a' href='#' size='fullWidth'>
+                  Get it on Chrome
+                </Button>
+                <Button as='a' href='#' variant='neutral' size='fullWidth'>
+                  Get it on Firefox
+                </Button>
+              </div>
             </div>
             <div>
               <img
