--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@
   }
 
   body {
-    @apply font-sans text-neutral-400 text-sm md:text-lg;
+    @apply font-sans text-neutral-400 text-sm md:text-lg leading-relaxed;
   }
 }
 
