change line-height in large device

--- a/src/components/ui/primary-heading.astro
+++ b/src/components/ui/primary-heading.astro
@@ -4,7 +4,7 @@ const { class: className, ...props } = Astro.props
 
 <h1
   class:list={[
-    'text-3xl font-medium leading-tight capitalize text-neutral-900 md:text-5xl md:leading-none',
+    'text-3xl font-medium leading-tight capitalize text-neutral-900 md:text-5xl md:leading-tight',
     className
   ]}
   {...props}
