--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,7 @@
 
 @layer utilities {
   .even-columns {
-    @apply grid gap-1 md:grid-flow-col md:auto-cols-fr;
+    @apply grid md:grid-flow-col md:auto-cols-fr;
   }
 
   .font-inherit {
