change button sizes

--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -18,9 +18,8 @@ const buttonVariants = cva(
         outline: 'bg-transparent text-current border-current'
       },
       size: {
-        default: 'px-6',
-        wide: 'px-8',
-        fullWidth: 'w-full'
+        default: 'w-full md:px-6 md:w-fit',
+        wide: 'px-8'
       }
     }
   }
