fix button position

--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -17,7 +17,7 @@ const {logo, browser, version, href} = Astro.props
     <h4 class='mb-4 | card__title'>Add to {browser}</h4>
     <p>Minimum version {version}</p>
   </header>
-  <main class='card__body'>
+  <main class='text-center | card__body'>
     <Button as='a' href={href} class='capitalize'>
       Add & install extension
     </Button>
